// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Anchor /> > should match snapshot with label, icon and to props 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="Anchor_root__um22v0 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_link__1xnpmd7e reset_cursorPointer__1oah0222 reset_a__1oah022a sprinkles_display_inline_mobile__onxwju89"
    href="https://www.autoguru.com.au"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhh sprinkles_display_flex_mobile__onxwju81 sprinkles_flexDirection_row_mobile__onxwjuk9 sprinkles_flexWrap_wrap_mobile__onxwjul9 sprinkles_gap_2_mobile__onxwjue5 sprinkles_minWidth_fit-content_mobile__onxwjudx sprinkles_position_relative_mobile__onxwju9p"
    >
      <div
        class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhh sprinkles_display_flex_mobile__onxwju81 sprinkles_gap_2_mobile__onxwjue5 sprinkles_flexWrap_nowrap_mobile__onxwjul5"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7t Icon_makeResponsiveStyle_key_bp__1gy3ire0 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_link__1xnpmd7e"
        >
          <svg
            aria-hidden="true"
            class="sprinkles_display_block_mobile__onxwju7t sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhh sprinkles_display_flex_mobile__onxwju81 sprinkles_gap_2_mobile__onxwjue5 sprinkles_flexWrap_nowrap_mobile__onxwjul5"
      >
        <span
          class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_sizes_4__1xnpmd74"
        >
          Hello World!
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`<Anchor /> > should match snapshot without label 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="Anchor_root__um22v0 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_link__1xnpmd7e reset_cursorPointer__1oah0222 reset_a__1oah022a sprinkles_display_inline_mobile__onxwju89"
  >
    <span
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_sizes_4__1xnpmd74"
    />
  </a>
</div>
`;

exports[`<Anchor /> > when custom component > should match snapshot with label, icon custom component 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <button
    class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_borderBottomStyle_solid__onxwju21 sprinkles_borderLeftStyle_solid__onxwju1z sprinkles_borderRightStyle_solid__onxwju23 sprinkles_borderTopStyle_solid__onxwju25 sprinkles_borderBottomWidth_none__onxwju1p sprinkles_borderLeftWidth_none__onxwju1l sprinkles_borderRightWidth_none__onxwju1t sprinkles_borderTopWidth_none__onxwju1x sprinkles_borderRadius_md__onxwju4 sprinkles_paddingLeft_4_mobile__onxwjuq9 sprinkles_paddingRight_4_mobile__onxwjurd sprinkles_paddingTop_none_mobile__onxwjut5 sprinkles_paddingBottom_none_mobile__onxwjupt sprinkles_display_inline-block_mobile__onxwju8d sprinkles_overflow_hidden_mobile__onxwju8p sprinkles_textAlign_center_mobile__onxwjua9 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_default__p2yon57 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_3__p2yon5m Anchor_root__um22v0 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_link__1xnpmd7e reset_block__1oah0224 sprinkles_display_inline_mobile__onxwju89"
    type="button"
  >
    <div
      class="reset_block__1oah0224 sprinkles_height_full_mobile__onxwjubt sprinkles_alignItems_center_mobile__onxwjuhh sprinkles_justifyContent_center_mobile__onxwjui1 Button_body__p2yon50"
    >
      <div
        class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhh sprinkles_display_flex_mobile__onxwju81 sprinkles_flexDirection_row_mobile__onxwjuk9 sprinkles_flexWrap_wrap_mobile__onxwjul9 sprinkles_gap_2_mobile__onxwjue5 sprinkles_minWidth_fit-content_mobile__onxwjudx sprinkles_position_relative_mobile__onxwju9p"
      >
        <div
          class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhh sprinkles_display_flex_mobile__onxwju81 sprinkles_gap_2_mobile__onxwjue5 sprinkles_flexWrap_nowrap_mobile__onxwjul5"
        >
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7t Icon_makeResponsiveStyle_key_bp__1gy3ire0 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_link__1xnpmd7e"
          >
            <svg
              aria-hidden="true"
              class="sprinkles_display_block_mobile__onxwju7t sprinkles_width_full_mobile__onxwjudd sprinkles_height_full_mobile__onxwjubt"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
              />
            </svg>
          </span>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhh sprinkles_display_flex_mobile__onxwju81 sprinkles_gap_2_mobile__onxwjue5 sprinkles_flexWrap_nowrap_mobile__onxwjul5"
        >
          <span
            class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_sizes_4__1xnpmd74"
          >
            Hello World!
          </span>
        </div>
      </div>
    </div>
  </button>
</div>
`;
